# rust-htmx

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20231121163732_create-tables.sql
migrations/2023-11-19-140110_create_users/: up.sql
src/: logging.rs  main.rs  models.rs
src/api/: index.rs  mod.rs
src/config/: crypto.rs  mod.rs
src/handlers/: mod.rs
src/models/: users.rs
static/CACHE/css/: output.26e14ee7e191.css  output.4d114fe61960.css  output.65d336bc575d.css  output.6604a062c932.css  output.6a492f8beb54.css  output.99672e8dd0d8.css  output.9ecc8ba420b6.css  output.a18a453a8b4b.css  output.ddea7c345d7d.css  output.f43e431d9f56.css
static/css/: login.css  main_page.css  tailwind.css
templates/: index.html
