[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
actix-web-lab = "0.20.1"
bcrypt = "0.15.0"
colored = "2.0.4"
cors = "0.1.0"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
prefixed-api-key = "0.1.0"
rand = "0.8.5"
redis = "0.23.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tera = "1.19.1"
tokio = "1.34.0"
tonic = "0.10.2"
