[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
actix-web = "4.4.0"
color-eyre = "0.6.2"
colored = "2.0.4"
config = "0.13.3"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
eyre = "0.6.9"
rand = "0.8.5"
redis = "0.23.3"
serde = { version = "1.0.192", features = ["derive"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
